  You might need to adjust your code if it used a QIconEngine.

- qmake
  * several functions and built-in variables were modified to return normalized paths.

- QTextCodecPlugin has been removed since it is no longer used. All text codecs
  are now built into QtCore.

- QDir::NoDotAndDotDot is QDir::NoDot|QDir::NoDotDot therefore there is no need
  to use or check both.

- QLocale
  * toShort(), toUShort(), toInt(), toUInt(), toLongLong() and toULongLong() no
    longer take a parameter for base, they will only perform localised base 10
    conversions. For converting other bases use the QString methods instead.

- QSystemLocale has been removed from the public API.

- QSqlQueryModel::indexInQuery() is now virtual. See note below under QSql.

- qMacVersion() has been removed. Use QSysInfo::macVersion() or
  QSysInfo::MacintoshVersion instead.

****************************************************************************
*                           General                                        *
****************************************************************************

General Improvements
--------------------

- The directory structure of the qtbase unit-tests has been reworked to
  more closely match the directory structure of the code under test.
  Integration tests have been moved to tests/auto/integrationtests.

Third party components
----------------------

-


****************************************************************************
*                          Library                                         *
****************************************************************************

QtCore
------
* drop a bogus QChar::NoCategory enum value; the proper QChar::Other_NotAssigned
  value is returned for an unassigned codepoints now.

* layoutAboutToBeChanged is no longer emitted by QAbstractItemModel::beginMoveRows.
  layoutChanged is no longer emitted by QAbstractItemModel::endMoveRows. Proxy models