@@ -1,2 +1,0 @@
-DECL|macro|QFSFILEENGINE_H
-DECL|variable|QFSFileEnginePrivate
