@@ -1,5 +1,5 @@
 CONFIG += testcase
 TARGET = tst_qabstractfileengine
-QT = core testlib
+QT = core-private core testlib
 SOURCES = tst_qabstractfileengine.cpp
 RESOURCES += qabstractfileengine.qrc
