@@ -1,6 +1,6 @@
 CONFIG += testcase parallel_test
 TARGET = tst_qdir
-QT = core testlib
+QT = core core-private testlib
 SOURCES = tst_qdir.cpp
 RESOURCES += qdir.qrc
 
