@@ -1,6 +1,6 @@
 TEMPLATE = app
 TARGET = tst_bench_qfile
-QT = core testlib
+QT = core core-private testlib
 win32: DEFINES+= _CRT_SECURE_NO_WARNINGS
 
 SOURCES += main.cpp
